Fix spacing on homepage title

--- a/assets/src/scss/components/_home.scss
+++ b/assets/src/scss/components/_home.scss
@@ -42,6 +42,16 @@
 	}
 }
 
+.home-entry-title {
+	line-height: 1.2;
+
+	padding-top: $global-base-unit;
+	padding-right: $global-base-unit * 4;
+	padding-bottom: $global-base-unit * 2;
+
+	@include ms-respond(font-size, 4);
+}
+
 .home-sidebar-primary {
 	margin-top: $global-base-unit * 4;
 	margin-left: $global-base-unit * 2;
@@ -174,5 +184,5 @@
 
 .home-sidebar-primary p,
 .home-sidebar-secondary p {
-	@include ms-respond(font-size, 0);
+	@include ms-respond(font-size, -1);
 }
